syntax = "proto3";

option csharp_namespace = "SmallShopWeb.ShopAPI.App.Client";

package catalog;

import "google/protobuf/empty.proto";

service ProductCatalog {
    rpc GetProducts (google.protobuf.Empty) returns (ProductListReply);
}

message ProductListReply {
    repeated ProductReply products = 1;
}

message ProductReply {
    int32 id = 1;
    string name = 2;
    string Description = 3;
    DecimalValue price = 4;
}

// Example: 12345.6789 -> { units = 12345, nanos = 678900000 }
message DecimalValue {

    // Whole units part of the amount
    int64 units = 1;

    // Nano units of the amount (10^-9)
    // Must be same sign as units
    sfixed32 nanos = 2;
}
